# nautobot-ssot-fortinet

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
development/: .env.example  Dockerfile  Makefile  docker-compose.yml
development/nautobot_config/: nautobot_config.py
development/scripts/: e2e_firewall_sync.py  e2e_jobs_lifecycle.py  e2e_live_firewall.py  e2e_live_wireless.py  e2e_push_address.py  e2e_push_addrgrp.py  e2e_push_nat.py  e2e_push_policy.py  e2e_push_service.py  e2e_push_svcgrp.py  e2e_push_validate.py  e2e_push_vap.py  e2e_push_wtp_profile.py  e2e_smoke_test.py  e2e_v31_inject_testdata.py  e2e_v326_inject_dstaddr.py  e2e_v32_hw_validate.py  e2e_wireless_sync.py  seed_dev_data.py
docs/: requirements.txt
docs/admin/: compatibility.md  install.md  mapping.md  troubleshooting.md  uninstall.md  upgrade.md
docs/admin/release_notes/: index.md  v3.x-summary.md  version_2026.05.18.1.md  version_2026.05.18.10.md  version_2026.05.18.11.md  version_2026.05.18.2.md  version_2026.05.18.3.md  version_2026.05.18.4.md  version_2026.05.18.5.md  version_2026.05.18.6.md  version_2026.05.18.7.md  version_2026.05.18.8.md  version_2026.05.18.9.md  version_2026.05.18.md
docs/dev/: architecture.md  contributing.md  dev_environment.md  extending.md
docs/user/: app_getting_started.md  app_overview.md  app_use_cases.md  external_interactions.md  faq.md  quickstart.md
src/nautobot_ssot_fortinet/: __init__.py  filters.py  forms.py  jobs.py  models.py  navigation.py  tables.py  urls.py  views.py
src/nautobot_ssot_fortinet/clients/: __init__.py  fortigate.py
src/nautobot_ssot_fortinet/diffsync/: __init__.py
src/nautobot_ssot_fortinet/diffsync/adapters/: __init__.py  fortigate_devices.py  fortigate_devices_target.py  fortigate_firewall.py  fortigate_firewall_target.py  fortigate_wireless.py  fortigate_wireless_target.py  nautobot_devices.py  nautobot_firewall.py  nautobot_wireless.py
src/nautobot_ssot_fortinet/diffsync/models/: __init__.py  devices.py  firewall.py  fortigate_target_devices.py  fortigate_target_firewall.py  fortigate_target_wireless.py  nautobot_devices.py  nautobot_firewall.py  nautobot_wireless.py  wireless.py
src/nautobot_ssot_fortinet/migrations/: 0001_initial.py
src/nautobot_ssot_fortinet/utils/: __init__.py  fortios.py
tests/: conftest.py  test_adapters_devices.py  test_adapters_firewall.py  test_adapters_nautobot.py  test_adapters_wireless.py  test_clients_fortigate.py  test_models_target_devices.py  test_models_target_wireless.py  test_utils_fortios.py
tests/fixtures/: firewall_address.json  firewall_addrgrp.json  firewall_policy.json  firewall_service_custom.json  firewall_service_group.json  firewall_vip.json  wireless_vap.json  wireless_wtp.json  wireless_wtp_profile.json
