[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nautobot-ssot-fortinet"
version = "2026.5.19.0"
description = "Nautobot SSoT integration for Fortinet (FortiGate firewall + FortiAP wireless, bidirectional sync)."
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [{ name = "Ryan Malloy", email = "ryan@supported.systems" }]
keywords = [
    "nautobot",
    "nautobot-app",
    "nautobot-plugin",
    "ssot",
    "diffsync",
    "fortinet",
    "fortigate",
    "fortios",
    "fortiap",
    "wireless",
    "firewall",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Topic :: System :: Networking",
    "Topic :: System :: Networking :: Firewalls",
]
dependencies = [
    "nautobot>=3.1,<4",
    "nautobot-ssot>=4.2,<5",
    "nautobot-firewall-models>=3.0,<4",
    "fortigate-api>=2.0,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "responses>=0.25",
    "ruff>=0.6",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings[python]>=0.26,<1",
    "mkdocs-glightbox>=0.4,<1",
    "mkdocs-include-markdown-plugin>=6.2,<8",
    "pymdown-extensions>=10.7",
    "markdown-version-annotations>=1.0,<2",
]

[project.urls]
Homepage = "https://github.com/rsp2k/nautobot-ssot-fortinet"
Issues = "https://github.com/rsp2k/nautobot-ssot-fortinet/issues"
Source = "https://github.com/rsp2k/nautobot-ssot-fortinet"

[tool.hatch.build.targets.wheel]
packages = ["src/nautobot_ssot_fortinet"]

[tool.hatch.build.targets.sdist]
exclude = [
    "CLAUDE.md",
    "CLAUDE.md.tmp.*",  # Claude scratch backups — caught leaking in v3.2.2 audit
    ".env",
    ".env.local",
    ".mcp.json",
    "/local/",
    "/development/",
    "/artifacts/",  # Container-side test artifacts (screenshots, logs)
    ".pytest_cache/",
    ".ruff_cache/",
    "dist/",
    "build/",
    "tests/",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "D",    # pydocstyle
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"src/nautobot_ssot_fortinet/migrations/*" = ["D"]
"development/scripts/*" = ["D"]
# The Nautobot-side CRUD model modules have rich class-level docstrings
# describing the create/update/delete contract — repeating it on every
# method body is noise. D102/D107/D417 silenced here only.
"src/nautobot_ssot_fortinet/diffsync/models/nautobot_firewall.py" = ["D102", "D107", "D417"]
"src/nautobot_ssot_fortinet/diffsync/models/nautobot_wireless.py" = ["D102", "D107", "D417"]
"src/nautobot_ssot_fortinet/diffsync/models/fortigate_target_firewall.py" = ["D102", "D107", "D417"]
"src/nautobot_ssot_fortinet/diffsync/models/fortigate_target_wireless.py" = ["D102", "D107", "D417"]
"src/nautobot_ssot_fortinet/diffsync/models/nautobot_devices.py" = ["D102", "D107", "D417"]
# Same justification for the FortiGate adapter __init__ signatures —
# Args: blocks are documented; the *args/**kwargs passthroughs aren't.
"src/nautobot_ssot_fortinet/diffsync/adapters/*.py" = ["D107", "D417"]
